<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_company_header"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_company"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:padding="8dp"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_company_first_name"
            app:layout_constraintTop_toBottomOf="@id/add_company_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:hint="@string/add_company_name_label">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_company_first_name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_company_address"
            app:layout_constraintTop_toBottomOf="@id/add_company_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            app:errorEnabled="true"

            android:layout_height="wrap_content"
            android:hint="@string/add_company_address_label">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_company_address_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_company_phone"
            app:layout_constraintTop_toBottomOf="@id/add_company_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:hint="@string/add_company_phone_label">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_company_phone_value"
                android:layout_width="match_parent"
                android:inputType="phone"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_company_speciality"
            app:layout_constraintTop_toBottomOf="@id/add_company_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            app:errorEnabled="true"
            android:layout_height="wrap_content"
            android:hint="@string/add_company_speciality_label">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_company_speciality_value"
                android:layout_width="match_parent"
                android:inputType="text"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/add_company_save"
            android:layout_width="match_parent"
            android:text="@string/add_save"
            android:textStyle="bold"
            app:backgroundTint="@color/colorPrimary"
            tools:backgroundTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/add_company_speciality"
            android:layout_height="?attr/actionBarSize"/>

</androidx.constraintlayout.widget.ConstraintLayout>