<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:padding="16dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".details.user.UserDetailsFragment">

    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/user_details_edit"
            android:layout_width="45dp"
            android:padding="10dp"
            android:src="@drawable/ic_edit_black_24dp"
            android:background="?attr/selectableItemBackground"
            android:layout_gravity="top|end"
            android:layout_height="45dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="45dp"
                android:padding="10dp"
                android:src="@drawable/ic_edit_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="45dp"/>

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/user_details_icon"
                android:layout_width="64dp"
                android:src="@drawable/ic_account_circle_24dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="64dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_name"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/user_details_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@string/app_name"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_address_label"
                android:text="@string/user_details_address"
                app:layout_constraintTop_toTopOf="@id/user_details_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/user_details_address"
                android:padding="16dp"
                app:layout_constraintEnd_toStartOf="@id/user_details_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_address"
                android:text="@string/user_details_address"
                app:layout_constraintTop_toBottomOf="@id/user_details_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="16dp"
                android:gravity="end"
                app:layout_constraintStart_toEndOf="@id/user_details_address_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_phone_label"
                android:text="@string/user_details_phone"
                app:layout_constraintTop_toTopOf="@id/user_details_phone"
                app:layout_constraintBottom_toBottomOf="@id/user_details_phone"
                app:layout_constraintEnd_toStartOf="@id/user_details_phone"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_phone"
                android:text="@string/user_details_phone"
                app:layout_constraintTop_toBottomOf="@id/user_details_address_label"
                android:gravity="end"
                android:padding="16dp"
                app:layout_constraintStart_toEndOf="@id/user_details_phone_label"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_speciality_label"
                android:text="@string/user_details_speciality"
                app:layout_constraintTop_toTopOf="@id/user_details_speciality"
                app:layout_constraintBottom_toBottomOf="@id/user_details_speciality"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/user_details_speciality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_speciality"
                android:text="@string/user_details_speciality"
                app:layout_constraintTop_toBottomOf="@id/user_details_phone_label"
                android:padding="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_details_speciality_label"
                android:textStyle="bold"
                android:gravity="end"
                android:textSize="16sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_company_label"
                android:text="@string/user_details_company"
                app:layout_constraintTop_toBottomOf="@id/user_details_speciality_label"
                android:padding="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/user_details_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/user_details_company"
                android:text="@string/user_details_company"
                app:layout_constraintTop_toBottomOf="@id/user_details_speciality_label"
                android:padding="16dp"
                android:gravity="end"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/user_details_company_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        <View android:layout_width="match_parent"
              app:layout_constraintTop_toBottomOf="@id/user_details_company"
              android:layout_height="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>